Refactor(FileStorage): Use the Java nio package for reading and writing files.